Update builds for static linking, optimization flags, and ignore binaries

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,6 +9,12 @@ builds:
     goarch:
       - amd64
       - arm64
+    env:
+      - CGO_ENABLED=0
+    ldflags:
+      - -s -w -extldflags '-static'
+    ignore:
+      - goos/arch: darwin/arm64
 
 upx:
   - # Whether to enable it or not.
